welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:25: error: expected class or object definition
 def isFacingTrail(c:Color):Boolean = {
 ^SlugSnail:45: error: Unmatched closing brace '}' ignored here
}
^